--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
 - [B] When deleting album Undefined property #2395
 - [B] Admins can not view "friends only" posts if not friend with user #2403
 - [B] Close Button (X) of System Messages Overlaps with Dropdown Menu #2396
+- [B] Redis password is an undefined var #2379
 
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.5
