[B] If not extra fields langauge won't save at all. Profile edit #2385

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
 - [B] Admins can not view "friends only" posts if not friend with user #2403
 - [B] Close Button (X) of System Messages Overlaps with Dropdown Menu #2396
 - [B] Redis password is an undefined var #2379
+- [B] If not extra fields langauge won't save at all. Profile edit #2385
+
 
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.5
