--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
 - [B] Redis password is an undefined var #2379
 - [B] If not extra fields langauge won't save at all. Profile edit #2385
 - [B] Add persian langauge #2412
+- [E] if no wall is enabled show a empty home page instead
 
 
 
