--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,4 @@
-OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
-- [B] Logo upload failed #2369
-- [B] Reset logo if no logo set before causing error #2368
-- [E] Update phpmailer
+OSSN - OPEN SOURCE SOCIAL NETWORK v8.0
 - [B] When deleting album Undefined property #2395
 - [B] Admins can not view "friends only" posts if not friend with user #2403
 - [B] Close Button (X) of System Messages Overlaps with Dropdown Menu #2396
@@ -28,7 +25,12 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
 - [E] Update jQuery UI 1.14.1
 - [E] Update fontawesome to 6.7.2
 - [B] wrong addressing of goblue admin page logo #2424
+- [E] Michael Drag Drop Cover Images (TouchPunch) added in core now. It loads on profile page and group page only.
 
+OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
+- [B] Logo upload failed #2369
+- [B] Reset logo if no logo set before causing error #2368
+- [E] Update phpmailer
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.5
 - [B] Editing user giving error, the email already existing (admin panel) #2364
