--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,7 +6,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [E] Idea to change alerts trigger messages to BS Toasts #2449
 - [B] Trigger message, when displayed x (close) button not working #2440
 - [B] Emojis are only inserted at end of text #2451
-
+- [B] Undefined property: stdClass::$wwww" in file /system/handlers/errors.php (line 30) #2444
  
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
