--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [B] Group change cover shows broken icon #2442
 - [B] Profile picture padded on left side #2433
 - [B] Tinymce missing si and farsi langauge #2431
+- [E] Update phpmailer to 6.10
  
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
