--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [B] Profile picture padded on left side #2433
 - [B] Tinymce missing si and farsi langauge #2431
 - [E] Update phpmailer to 6.10
+- [E] If account is activated and user visited activation page show activation message #2432
  
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
