--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [E] Update phpmailer to 6.10
 - [E] If account is activated and user visited activation page show activation message #2432
 - [E] Allow tagging in group for group members only #2436
+- [B] OssnNotifications component removed and when user is deleted cause error #2459
  
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
