--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [E] If account is activated and user visited activation page show activation message #2432
 - [E] Allow tagging in group for group members only #2436
 - [B] OssnNotifications component removed and when user is deleted cause error #2459
+- [E] Friends widget on profile page . Friends should be in center #2445
  
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
