--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [E] Friends widget on profile page . Friends should be in center #2445
 - [B] Fix indexes in database (uses MyISAM) #2455
 - [E] Add time_updated to tables that allows update like user, object etc #2454
+- [E] Allow to complete remove all notifications or single #2446
 
  
 
