--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [E] Remove multiple new lines in post and multiple spaces to single #2461
 - [E] Normalize Wall Remove JSON #2460
 - [E] Remove multiple new lines from comments and multiple spaces to single #2462
+- [E] Reactions instead of "like" #2453
+
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
 - [B] Owner can not able to delete comment of others in photo #2428
