--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.2
 - [E] Normalize Wall Remove JSON #2460
 - [E] Remove multiple new lines from comments and multiple spaces to single #2462
 - [E] Reactions instead of "like" #2453
+- [E] Normalize Wall Remove JSON #2460
+- [E] Remove multiple new lines from comments and multiple spaces to single #2462
 
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.1
