--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+OSSN - OPEN SOURCE SOCIAL NETWORK v8.4
+- [E] Change DB engine to InnoDB #2468
+- [B] Installation fails for OSSN 8.3 #2467
+
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.3
 - [B] php 8.4 deprecation notices #2465
 - [B] PostBackground not working #2466
