--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v8.6
 - [E] Make time_updated = time_created by default not 0 #2472
 - [E] Add styling to license page on installation #2473
 - [E] Update old if time_updated=0 to time_created #2472
-
+- [B] comment edit is not working #2474
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.5
 - [B] time_updated not showing in results #2470
