--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+OSSN - OPEN SOURCE SOCIAL NETWORK v8.9
+- [B] groups not showing in search because of $q in single quotes #2487
+- [B] Group shows wrong member requests #2486
+- [B] Other PHP deprecations fixes
+
 OSSN - OPEN SOURCE SOCIAL NETWORK v8.8
 - [B] Tag notification is not sending #2485
 - [B] PHP 8.4 deprecations for OSSN 8.8 #2484
